# parts_info_collector

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  auth_gemini.py  config.py  first_start.bat  first_start.sh  main.py  pyproject.toml  requirements.txt  run2.bat  run2.sh  run3.bat  run3.sh  run4.bat  run4.sh  run5.bat  run5.sh  run6.bat  run6.sh  run7.bat  run7.sh  run8.bat  run8.sh  start.bat  start.sh
backend/: cli.py  config.py  main.py
backend/agents/: __init__.py  research_agent.py
backend/api/: app.py  routes.py
backend/clients/: llm_client.py
backend/promts/: generator.py
backend/tools/: __init__.py  web_search.py
backend/utils/: db_writer.py  migrations.py  parse.py
clients/: llm_client.py
db/: results.db
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Card.tsx  CollectItem.tsx  Dashboard.tsx  ExcelJob.tsx  ItemsTable.tsx  Search.tsx
input/: input.xlsx
promts/: generator.py
scrapers/: gemini.py
tests/: conftest.py  test_api.py  test_config.py  test_db_writer.py  test_llm_client.py  test_web_search.py
user-data/: Last Browser  Local State  first_party_sets.db
user-data/Default/: BrowsingTopicsState  DIPS  Favicons  History  MediaDeviceSalts  Preferences  Secure Preferences  Top Sites  Web Data
user-data/Default/DawnGraphiteCache/: data_1  index
user-data/Default/DawnWebGPUCache/: data_1  index
user-data/Default/Extension Rules/: LOG
user-data/Default/Extension Scripts/: LOG
user-data/Default/Extension State/: LOG  LOG.old
user-data/Default/GCM Store/: LOG  LOG.old
user-data/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  index
user-data/GraphiteDawnCache/: data_1  index
user-data/ShaderCache/: data_1  index
user-data/segmentation_platform/: ukm_db
utils/: check_columns.py  db_writer.py  io.py  parse.py
(+524 files in other folders)
