[project]
name = "parts-info-collector"
version = "0.1.0"
description = "Automation toolkit for mass collection of spare-part specs using AI. Reads part numbers from Excel, sends structured prompts, parses responses into SQLite and exports a formatted Excel report. Resilient to restarts and tuned for tens of thousands of rows."
authors = [
    { name = "Ama", email = "amalsdev367@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.14.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pydantic-settings>=2.2.0",
    "rich>=15.0.0",
    "requests>=2.34.2",
    "ddgs>=9.14.4",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
]

[project.urls]
Repository = "https://github.com/AmaLS367/parts_info_collector"

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
ignore = []

[tool.mypy]
explicit_package_bases = true
python_version = "3.10"
ignore_missing_imports = true
strict = true


[tool.pytest.ini_options]
pythonpath = ["."]
